--- a/src/Components/Api/Apis.css
+++ b/src/Components/Api/Apis.css
@@ -14,12 +14,7 @@
     overflow: hidden;
   }
 
- 
- .container-weather .navBar {
-    /* width: 85%; */
-    height: 10%;
-    /* border: 3px solid green; */
-  }
+
   
   .search {
     display: flex;
@@ -27,10 +22,15 @@
   
     margin-left: 490px;
   }
+  .navBar{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
   .nav {
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: center;
     font-weight: 900;
     grid-area: 10px;
     margin-right: 30px;
@@ -111,7 +111,44 @@
   img {
     width: 500px;
   }
+  @media only screen and (max-width: 700px) {
+
+    .container-weather {
+      width: 100%;
+      height: 130vh;
+      
+      
+      
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 30px;
+      overflow: hidden;
+    }
+    .search {
+      display: flex;
+      align-items: center;
+    
+      margin-left: 490px;
+    }
+    .navBar{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+    /* .nav {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-content: center;
+      font-weight: 600;
+      grid-area: 5px;
+      margin-right: 30px;
+      overflow: hidden;
   
+    } */
+  }
+
   /*@media only screen and (min-width: 700px) {
      .search{
       width: 50px;
