--- a/src/Components/Login/Login.module.css
+++ b/src/Components/Login/Login.module.css
@@ -49,12 +49,15 @@
   justify-content: flex-start;
   flex-direction: column;
   gap: 20px;
+  color: red;
 }
+
 .card a {
   text-decoration: none;
   font-size: 15px;
   transform: translateX(60%);
-  color: #c70039;
+  color: red;
+  
 }
 .parent button {
   padding: 12px 70px;
@@ -62,7 +65,54 @@
   background-color: #2b2bf8;
   border: none;
   border-radius: 8px;
+  
 }
 .parent h1{
   font-style: italic;
 }
+
+@media only screen and (max-width: 700px) {
+  
+  .parent .card {
+    width: 100%;
+    height: 15%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: column;
+    gap: 10px;
+    
+  }
+  .card a {
+    text-decoration: none;
+    font-size: 13px;
+    transform: translateX(-6%);
+    color: red;
+    
+  }
+  .parent button {
+    padding: 12px 50px;
+    color:white;
+    background-color: #2b2bf8;
+    border: none;
+    border-radius: 8px;
+    
+  }
+  .parent input {
+    width: 55%;
+    height: 8%;
+    padding: 0 20px;
+    text-align: center;
+    border-radius: 8px;
+    border-style: none;
+  }
+}
+/* @media only screen and (max-width: 420px) {
+  
+  .card a {
+    text-decoration: none;
+    font-size: 5px;
+    transform: translateX(60%);
+    color: #c70039;
+  }
+} */
