--- a/src/Components/Api/Apis.css
+++ b/src/Components/Api/Apis.css
@@ -1,195 +1,166 @@
 .container-weather {
-    width: auto;
-    height: 130vh;
-    background-image: url("../Picture/bg.jpg");
-    background-size: cover;
-    border: 1px solid;
-    font-family: cursive;
-    font-size: larger;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 30px;
-    overflow: hidden;
+  width: 100%;
+  height: 590px;
+  background-image: url(../Picture/sea.jpg);
+  animation: parent 100s ease 0s 6 normal forwards;
+  background-size: cover;
+  background-repeat: no-repeat;
+  overflow: hidden;
+}
+
+.container-nav {
+  display: flex;
+  flex-direction: row;
+  float: right;
+  gap: 40px;
+  margin-right: 50px;
+  margin-top: 40px;
+  text-decoration: none;
+}
+.container-nav a {
+  color: white;
+  text-decoration: none;
+}
+.container-logo img {
+  width: 150px;
+  float: left;
+  top: 20px;
+}
+
+.search {
+  position: relative;
+  margin: 20px 0 40px;
+  width: 150px;
+  height: 50px;
+  margin-left: 20px;
+}
+.search input {
+  background-color: transparent;
+  border: 0;
+  border-bottom: 2px #fff solid;
+  display: block;
+  width: 100%;
+  padding: 15px 0;
+  font-size: 18px;
+  color: #fff;
+}
+.search input:focus,
+.search input:valid {
+  outline: 0;
+  border-bottom-color: rgb(5, 5, 5);
+}
+
+.search label {
+  position: absolute;
+  top: 120px;
+  left: 0;
+  pointer-events: none;
+}
+
+.search label span {
+  display: inline-block;
+  font-size: 18px;
+  min-width: 5px;
+  color: #fff;
+  transition: 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.search input:focus + label span,
+.search input:valid + label span {
+  color: rgb(7, 7, 7);
+  transform: translateY(-30px);
+}
+
+img#tion {
+  width: 30px;
+  height: 30px;
+  background-color: rgb(251, 250, 252);
+  border-radius: 18px;
+  cursor: pointer;
+  margin-right: 180px;
+  margin-top: 10px;
+}
+
+.winfo {
+  width: 650px;
+  height: auto;
+  margin-left: 280px;
+  margin-top: 100px;
+  color: white;
+}
+
+.original {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-right: 100px;
+  margin-left: 120px;
+}
+
+.details {
+  font-weight: 900;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+@media only screen and (max-width: 1200px) {
+  .container-weather {
+    
+    height: 930;
+  }
+ 
+  .container-logo img {
+    width: 100px;
+    float: left;
   }
 
+  search {
+    width: 180px;
+    height: 10px;
+  }
 
-  
-  .search {
-    display: flex;
-    align-items: center;
-  
-    margin-left: 490px;
+  .search input {
+    width: 100%;
+    padding: 15px 0;
+    font-size: 15px;
+    color: #fcfafa;
+    
   }
-  .navBar{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+  .search label span {
+    font-size: 15px;
+    
+    
   }
-  .nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    font-weight: 900;
-    grid-area: 10px;
-    margin-right: 30px;
-    overflow: hidden;
 
+  img#tion {
+    width: 20px;
+    height: 20px;
+    margin-right: 18px;
+    margin-top: 9px;
   }
-  .login {
-    margin-left: 15px;
-    margin-right: 15px;
-  }
-  .nav:hover {
-    color: blue;
-  }
-  .logo {
-    margin-right: 900px;
-    font-size: xx-large;
-  }
-  .container-weather button {
-    width: 30px;
-    height: 30px;
-    cursor: pointer;
-  }
-  
-  input {
-    width: 200px;
-    height: 35px;
-    border-radius: 30px;
-    background-color: antiquewhite;
-    /*  background: linear-gradient(#ff54a2,#ff575a);*/
-  }
-  
+
   .winfo {
-    text-align: center;
-    background-image: url("../Picture/plhjngb.jpg");
-    overflow: hidden;
-    border-radius: 8px;
-    width: 650px;
-    height: 600px;
-    margin-top: 40px;
-    margin-left: 300px;
-    background-repeat: no-repeat;
+    width: auto;
+    height: auto;
+    margin-left: 10px;
+    margin-top: 200px;
   }
-  
+
   .original {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    margin-right: 100px;
-    margin-left: 120px;
+    gap: 20px;
   }
-  
-  .weather img {
-    width: 50px;
-    overflow: hidden;
-
-  }
-  
-  .details {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    font-weight: 900;
-  }
-  
-  button#tion {
-    width: 30px;
-    height: 30px;
-    background-image: url("../Picture/icons8-worldwide-location-32.png");
-    background-repeat: no-repeat;
-    background-color: antiquewhite;
-    border-radius: 18px;
-    background-size: cover;
-    border: none;
-    overflow: hidden;
-
-    cursor: pointer;
-  }
-  img {
-    width: 500px;
-  }
-  @media only screen and (max-width: 700px) {
-
-    .container-weather {
-      width: 100%;
-      height: 130vh;
-      
-      
-      
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 30px;
-      overflow: hidden;
+}
+@media only screen and (min-width: 1200px) and (max-width: 1800px) {
+  @keyframes parent {
+    0% {
+      background-position: center bottom;
+      background-size: 100%;
     }
-    .search {
-      display: flex;
-      align-items: center;
-    
-      margin-left: 490px;
-    }
-    .navBar{
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-    }
-    /* .nav {
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      align-content: center;
-      font-weight: 600;
-      grid-area: 5px;
-      margin-right: 30px;
-      overflow: hidden;
-  
-    } */
-  }
 
-  /*@media only screen and (min-width: 700px) {
-     .search{
-      width: 50px;
-     }
-    }*/
-  /*@media (max-width: 600px) {
-      .container-wheater {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-    
-      .winfo {
-        margin-top: 0;
-        margin-left: 0;
-      }
-    
-      .weather {
-        flex-direction: row;
-        justify-content: space-between;
-      }
-    
-      .winfo {
-        width: 100%;
-        max-width: 750px;
-        margin: 120px auto 0;
-      }
-    
-      .original {
-        margin-right: 0;
-        margin-left: 0;
-      }
-    
-      .details {
-        flex-direction: column;
-        align-items: center;
-      }
-    
-      img {
-        max-width: 100%;
-      }
+    100% {
+      background-position: center bottom;
+      background-size: 150%;
     }
-  */
-  
+  }
+}
