--- a/src/Components/Login/Login.module.css
+++ b/src/Components/Login/Login.module.css
@@ -5,11 +5,34 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-image: url(../Picture/bg.jpg);
+  background-image: url(../Picture/sea.jpg);
+  animation: parent 100s ease 0s 6 normal forwards;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 }
+@media only screen and (min-width: 1200px) and (max-width: 1800px) {
+  @keyframes parent {
+    0% {
+      background-position: center bottom;
+      background-size: 100%;
+    }
+
+    100% {
+      background-position: center bottom;
+      background-size: 150%;
+    }
+  }
+}
+
+/* .parent button { 
+    padding: 12px 70px;
+    color: #fff;
+    background-color: #2b2bf8;
+    border: none;
+    border-radius: 8px;
+    margin-right: 20px;
+  } */
 .parent .container {
   width: 65%;
   height: 75%;
@@ -46,33 +69,31 @@
   height: 30%;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   flex-direction: column;
   gap: 20px;
-  color: red;
+  color: rgb(250, 248, 248);
 }
 
 .card a {
   text-decoration: none;
   font-size: 15px;
-  transform: translateX(60%);
-  color: red;
-  
+  color: #080808;
 }
-.parent button {
-  padding: 12px 70px;
-  color: #fff;
+
+.parent .card button {
+  padding: 12px 60px;
+  cursor: pointer;
   background-color: #2b2bf8;
   border: none;
   border-radius: 8px;
-  
+  color: #fff;
 }
-.parent h1{
+.parent h1 {
   font-style: italic;
 }
 
-@media only screen and (max-width: 700px) {
-  
+@media only screen and (max-width: 1200px) {
   .parent .card {
     width: 100%;
     height: 15%;
@@ -81,22 +102,19 @@
     justify-content: flex-start;
     flex-direction: column;
     gap: 10px;
-    
   }
   .card a {
     text-decoration: none;
     font-size: 13px;
     transform: translateX(-6%);
     color: red;
-    
   }
   .parent button {
     padding: 12px 50px;
-    color:white;
+    color: white;
     background-color: #2b2bf8;
     border: none;
     border-radius: 8px;
-    
   }
   .parent input {
     width: 55%;
